file system and user services largely built and tested.

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,5 +13,10 @@
     </ion-toolbar>
   </ion-header>
 
+  <button class="ion-button large" (click)="fileReadTest()">TEST BUTTON</button>
+
+  <button class="ion-button large" (click)="fileStatTest()">STAT TEST BUTTON</button>
+
+
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
