--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,5 +13,10 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <div *ngIf="showUpdateOwner">
+    <label >Who owns this phone?</label>
+      <ion-input  [(ngModel)]="ownerNameFromTemplate"> </ion-input>
+    <button  (click)="updateOwner()">Save</button>
+  </div>
+  <h1>{{ownerNameFromTemplate}}</h1>
 </ion-content>
