--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -36,11 +36,25 @@
     <button *ngIf="users && users.length > 0"  (click)="showUsersEditor = !showUsersEditor">Cancel</button>
   </div>
 
-  <div *ngIf="users && users.length > 0">
+  <!-- <div *ngIf="users && users.length > 0">
+    TEST TEST!
     <ion-list>
       <ion-item *ngFor="let user of users">{{user.name}}</ion-item>
     </ion-list>
+    <!-- <button (click)="toggleDisplayUsersOrderSetting()"></button>
 
+   </div>
+     -->
+
+  <div *ngIf="displayUsers && displayUsers.length > 0">
+
+    TEST TEST!
+    <ion-list>
+      <ion-item *ngFor="let user of displayUsers">{{user.name}}</ion-item>
+    </ion-list>
+
+
+    <button (click)="toggleDisplayUsersOrderSetting()">Toggle Alphabetical</button>
   </div>
 
 
