--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,9 +13,27 @@
     </ion-toolbar>
   </ion-header>
 
-  <button class="ion-button large" (click)="fileReadTest()">TEST BUTTON</button>
+  <ion-grid>
+    <ion-row> <ion-col size="12" class="ion-text-center"> <ion-button (click)="handleSwitchClick()"> Switch </ion-button></ion-col> </ion-row>
+    <ion-row> <ion-col size="6" class="ion-text-center"> Belayer:</ion-col> <ion-col size="6"> Climber: </ion-col> </ion-row>
+    <ion-row> <ion-col size="6" class="ion-text-center"> {{currBelayer.name}} </ion-col> <ion-col size="6"> {{currClimber.name}}</ion-col> </ion-row>
 
-  <button class="ion-button large" (click)="fileStatTest()">STAT TEST BUTTON</button>
+    <ion-row> <ion-col size="12" class="ion-text-center">
+      <div *ngIf="!!timerServ.stopWatches[currClimber.id].getCurrentLocalInterval()">
+      {{timerServ.stopWatches[currClimber.id].getCurrentLocalInterval()}} 
+      </div>
+      <div *ngIf="!timerServ.stopWatches[currClimber.id].getCurrentLocalInterval()">
+        00
+      </div>
+
+    </ion-col> </ion-row>
+
+    <ion-row>
+      <ion-col size="3"><ion-button (click)="startTimer()">Start</ion-button></ion-col>
+      <ion-col size="3"><ion-button (click)="pauseTimer()">Pause</ion-button></ion-col>
+      <ion-col size="3"><ion-button (click)="resetTimer()">Reset</ion-button></ion-col>
+    </ion-row>
+  </ion-grid>
 
 
 </ion-content>
