--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -20,7 +20,9 @@
 
     <ion-row> <ion-col size="12" class="ion-text-center">
       <div *ngIf="!!timerServ.stopWatches[currClimber.id].getCurrentLocalInterval()">
-      {{timerServ.stopWatches[currClimber.id].getCurrentLocalInterval()}} 
+      <!-- {{currClimberElapsedTime}}  -->
+      Id: {{currClimber.id}}
+      Time: {{timerServ.stopWatches[currClimber.id].getCurrentLocalInterval()}}
       </div>
       <div *ngIf="!timerServ.stopWatches[currClimber.id].getCurrentLocalInterval()">
         00
