Temp user id collision fix.

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -22,7 +22,8 @@
         <div *ngIf="timerServ.stopWatches && timerServ.stopWatches[stopwatchKeyForTemplate] && !!timerServ.stopWatches[stopwatchKeyForTemplate].getCurrentLocalInterval()">
         {{currClimberElapsedTime}}
         <!-- Id: {{currClimber.id}} -->
-        Time: {{timerServ.stopWatches[stopwatchKeyForTemplate].getCurrentLocalInterval()}}
+        <!-- Time: {{timerServ.stopWatches[stopwatchKeyForTemplate].getCurrentLocalInterval()}} -->
+        Time: {{ timerServ.stopWatches[stopwatchKeyForTemplate].timerSubject | async }}
         </div>
         <div *ngIf="timerServ.stopWatches && timerServ.stopWatches[stopwatchKeyForTemplate] && !timerServ.stopWatches[stopwatchKeyForTemplate].getCurrentLocalInterval()">
           00
