--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -35,7 +35,16 @@
       <ion-col size="3"><ion-button (click)="startTimer()">Start</ion-button></ion-col>
       <ion-col size="3"><ion-button (click)="pauseTimer()">Pause</ion-button></ion-col>
       <ion-col size="3"><ion-button (click)="resetTimer()">Reset</ion-button></ion-col>
+
+      <ion-col size="12">
+        <ion-button class="ion-text-center" (click)="saveTimes()">
+          Save
+        </ion-button>
+     </ion-col>
+
     </ion-row>
+
+
   </ion-grid>
 
 
