--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -16,7 +16,7 @@
   <ion-grid>
     <ion-row> <ion-col size="12" class="ion-text-center"> <ion-button (click)="handleSwitchClick()"> Switch </ion-button></ion-col> </ion-row>
     <ion-row> <ion-col size="6" class="ion-text-center"> Belayer:</ion-col> <ion-col size="6"> Climber: </ion-col> </ion-row>
-    <ion-row> <ion-col size="6" class="ion-text-center"> {{currBelayer.name}} </ion-col> <ion-col size="6"> {{currClimber.name}}</ion-col> </ion-row>
+    <ion-row *ngIf="currBelayer"> <ion-col size="6" class="ion-text-center"> {{currBelayer.name}} </ion-col> <ion-col size="6"> {{currClimber.name}}</ion-col> </ion-row>
 
     <ion-row> <ion-col size="12" class="ion-text-center">
         <div *ngIf="timerServ.stopWatches && timerServ.stopWatches[stopwatchKeyForTemplate] && !!timerServ.stopWatches[stopwatchKeyForTemplate].getCurrentLocalInterval()">
