--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -20,6 +20,22 @@
 
   </app-doughnut-chart>
 
+ <!-- <div style="display: block">
+<canvas baseChart
+  [attr.data]="doughnutChartData"
+  [attr.labels]="doughnutChartLabels"
+  [attr.chartType]="doughnutChartType">
+</canvas>
+</div> -->
+
+<!-- <div style="display: block">
+  <canvas baseChart
+    [data]="doughnutChartData"
+    [labels]="doughnutChartLabels"
+    [chartType]="doughnutChartType">
+  </canvas>
+</div> -->
+
   <!-- <mat-form-field>
     <mat-label>Enter a date range</mat-label>
     <mat-date-range-input [rangePicker]="picker">
