--- a/src/app/doughnut-chart/doughnut-chart.component.html
+++ b/src/app/doughnut-chart/doughnut-chart.component.html
@@ -1,14 +1,22 @@
 
 <div *ngIf="showDatePicker">
 
+
+        <!-- (dateChange)="handleStartDateChange($event)"
+        (dateInput)="handleStartDateChange($event)" -->
+          <!-- (dateChange)="handleEndDateChange($event)"
+        (dateInput)="handleEndDateChange($event)"  -->
   <mat-form-field>
     <mat-label>Enter a date range</mat-label>
-    <mat-date-range-input
-    [rangePicker]="picker"
-    (dateChange)="handleDateChange()"
-    >
-      <input matStartDate matInput placeholder="Start date">
-      <input matEndDate matInput placeholder="End date">
+    <mat-date-range-input [formGroup]="rangeFormGroup" [rangePicker]="picker" >
+      <input matStartDate matInput
+        placeholder="Start Date"
+        formControlName="start"
+       >
+      <input matEndDate matInput
+        placeholder="End date"
+        formControlName="end"
+      >
     </mat-date-range-input>
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-date-range-picker touchUi #picker></mat-date-range-picker>
