Timer page styling.

--- a/src/app/doughnut-chart/doughnut-chart.component.html
+++ b/src/app/doughnut-chart/doughnut-chart.component.html
@@ -39,6 +39,9 @@
 <div class="danger" *ngIf="showNoDataAvailableMessage">
   <h1> {{users[0].name}} and {{users[1].name}} have never belayed each other!</h1>
 </div>
+<div>
+  <h1>{{users[0].name}} and {{users[1].name}}</h1>
+</div>
 
 <!-- <div class="owner-color">
 <h1> TEST TEST</h1>
