--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,1 +1,61 @@
+ion-tab-bar{
+  border-top-left-radius: 24px;
+  border-top-right-radius: 24px;
+  // background-color: var(--ion-color-dark)
+}
 
+ion-tab-button {
+  --color: var(--ion-color-medium);
+  --color-selected: var(--ion-color-medium);
+
+  --background: var(--ion-color-dark-tint);
+  // --background: #161212;
+  // background-color: #161212;
+
+  &::before {
+    background-color: transparent;
+    display: block;
+    content: "";
+    margin: auto;
+    width: 35px;
+    height: 4px;
+    border-radius: 3px;
+
+  }
+
+  &.tab-selected {
+    --background: var(--ion-color-dark);
+  }
+
+  &.tab-selected::before{
+    // background-color: var(--ion-color-medium);
+    }
+
+  &.tab-selected .underline{
+    background-color: var(--ion-color-medium);
+    // display: relative;
+    position:relative;
+    content: "";
+    margin: auto;
+    width: 35px;
+    height: 4px;
+    border-radius: 3px;
+    // border-style: dashed;
+    // border-color: blue;
+    top: -4px;
+  }
+
+  // &::after {
+  //   background-color: transparent;
+  //   display: block;
+  //   content: "";
+  //   margin: 0 auto;
+  //   width: 35px;
+  //   height: 100px;
+  //
+  // }
+  //
+  // &.tab-selected::after{
+  //   background-color: var(--ion-color-medium);
+  // }
+}
